--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>segunda prueba</title>
 </head>
 <body>
     <h1>segunda prueba github</h1>
+    <p>parrafo nuevo</p>
     
 </body>
 </html>
